# cjet

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO  all.qbs  analyzer.cmake  appveyor.yml  cJSON.c  cJSON.h  clang.cmake  compiler.h  config.c  config.h  defaults.cmake  echo.c  fetch.c  fetch.h  gcc.cmake  hashtable.h  jet_config.c  jet_config.h  jet_string.h  jetsetter.txt  list.h  lmatch.c  lmatch.h  main.c  method.c  method.h  methods.txt  parse.c  parse.h  passwd.json  passwd_call_group_no_array.json  passwd_no_json_data.json  passwd_no_user_data.json  peer.c  (+13 more)
cmake/: analyzer.cmake  defaults.cmake  gcc.cmake  generate_doxygen.cmake  hardening.cmake  version.cmake
gen_message_hashes/: hash_func.h  main.c
json/: cJSON.c
linux/: CMakeLists.txt  analyzer.cmake  arm_gcc.cmake  clang.cmake  config.h  gcc.cmake  io.h  io_epoll.c  io_mt.c  main.c  main_mt.c  peer.c  peer_testing.h  ppc_gcc.cmake
linux/cmake/: ppc_gcc.cmake
linux/epoll/: CMakeLists.txt  config.h  io.c  io.h  io_epoll.c  io_loop.c  io_loop.h  io_ops.h  main.c  peer.c  peer_io.h  peer_io_ops.h
linux/epoll/config/: config.h  io.h  log.h  peer_io.h
linux/epoll/tests/: CMakeLists.txt  Parse.cpp  Peer.cpp  ReadbufferTest.cpp  Response.cpp  State.cpp  make_coverage.sh
linux/mt/: CMakeLists.txt  config.h  io.c  main.c  peer_io.h
linux/mt/config/: io.h
linux/tests/: CMakeLists.txt  Parse.cpp  ReadbufferTest.cpp  State.cpp
qbs/: cjet_helper.js  gccClang.qbs  hardening.qbs  patchVersions.js  unitTestSettings.qbs  unittestRunner.qbs  unittestSettings.qbs  versions.js
qbs/modules/generateAutobahnConfig/: generateAutobahnConfig.qbs
qbs/modules/generateCjetConfig/: generateCjetConfig.qbs
qbs/modules/generateConfig/: generateConfig.qbs
qbs/modules/generateDoxygen/: generateDoxygen.qbs
qbs/modules/generateOsConfig/: generateOsConfig.qbs
qbs/modules/generateVersion/: generateVersion.qbs
qbs/modules/patchDoxyfile/: patchDoxyfile.qbs
scripts/: make_coverage.sh
sonar/: c-c-mit-license-17794.xml  sonar-project.properties
src/: CMakeLists.txt  Doxyfile  Doxyfile.in  alloc.c  alloc.h  authenticate.c  authenticate.h  autobahnTest.qbs  base64.c  base64.h  buffered_reader.h  buffered_socket.c  buffered_socket.h  cjet.qbs  cjet_config.h.in  cjet_doc.qbs  cjet_io.h  cmdline_config.h  compiler.h  compression.c  compression.h  config.c  config.h  element.c  element.h  error_codes.h  eventloop.h  fetch.c  fetch.h  groups.c  groups.h  hashtable.h  http_connection.c  http_connection.h  http_server.c  http_server.h  info.c  info.h  jet_endian.h  jet_random.h  (+38 more)
src/autobahnfiles/: README.md  abLinux_io.c  abLog.c  abLog.h  abMain.c  abREADME.md  abWebsocket_peer.c  abWebsocket_peer.h  create_documentation.md  readme.txt
src/http-parser/: http_parser.c
src/json/: cJSON.c  cJSON.h
src/linux/: alloc.c  buffered_socket_alloc.c  cmdline_config.h  eventloop.c  eventloop.h  eventloop_epoll.c  eventloop_epoll.h  io.c  io.h  io_event.h  io_loop.c  io_loop.h  jet_endian.c  jet_string.c  linux_auth_file.c  linux_io.c  linux_io.h  main.c  peer_testing.h  random.c  socket.c  timer.c  timer.h  timer_linux.c  uuid.c  websocket_random.c
src/linux/cmake/: arm_gcc.cmake
src/linux/config/: os_config.h.in
src/linux/epoll/: io.c  io_loop.c  peer_testing.h  timer.c  timer.h
src/linux/epoll/config/: config.h  config.h.in  io.h
src/linux/epoll/tests/: CMakeLists.txt  Parse.cpp  ReadbufferTest.cpp  Response.cpp  log.cpp  readbuffer_test.cpp
src/linux/tests/: CMakeLists.txt  log.cpp  readbuffer_test.cpp  test.qbs
src/posix/: auth_file.c  jet_string.c  log.c  main.c  posix_random.c  socket.c
src/systemd/: cjet.service.in
src/systemd/avahi/: jet.service  jet.service.in  jetws.service.in
src/tests/: CMakeLists.txt  access_test.cpp  alloc_test.cpp  auth_file_test.cpp  auth_stub.cpp  base64_test.cpp  buffered_socket_test.cpp  combined_test.cpp  compression_test.cpp  config_test.cpp  fetch_test.cpp  http_connection_test.cpp  info_test.cpp  linux_auth_file_test.cpp  log.cpp  log_test.h  make_coverage.sh  method_test.cpp  parse_test.cpp  peer_test.cpp  response_test.cpp  router_test.cpp  state_test.cpp  string_test.cpp  test.qbs  utf8_checker_test.cpp  websocket_frame_test.cpp  websocket_peer_test.cpp  websocket_test.cpp
src/tests/input_data/: passwd_fetch_group_no_array.json  passwd_set_group_no_array.json  passwd_std.json
src/utf8_speedup/: main.c  utf8_speedup.qbs
src/win32/: auth_file_win.c  cjet.sln  cjet.vcxproj  cjet.vcxproj.filters  jet_endian_win.c  jet_string_win.c  log_win.c  main.c  random_win.c  socket_win.c  timer_win.c
src/windows/: endian.h  epoll.c  epoll.h  eventloop_epoll.c  eventloop_epoll.h  getopt.c  getopt.h  jet_endian.c  jet_string.c  memmem.c  memmem.h  mman.c  mman.h  random.c  sigpipe.h  strcasestr.c  strcasestr.h  strings.h  timer_windows.c  uio.c  uio.h  wglobals.h  windows_io.c  windows_io.h
src/windows/epoll/: epoll.c  epoll.h  msafd.h  ntapi.h  tree.h
src/windows/mman/: mman.h
src/windows/posix/: auth_file.c  jet_string.c  main.c  socket.c
test/: echo.c  io_gplot.R  main.c  mx471.states  mx840.states
tests/: CMakeLists.txt  Parse.cpp  ReadbufferTest.cpp  State.cpp
traces/: set.pcapng
valgrind/: valgrind.supp
vstudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cjet binary and tests.VC.VC.opendb  cjet binary and tests.sln  cmake_install.cmake
vstudio/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cjet.sln  cjet.vcxproj  cjet.vcxproj.filters  cmake_install.cmake
vstudio/src/tests/input_data/: passwd_std.json
